Added food items & modified style to be according to design

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a id="logoText" class="navbar-brand texty" href="./index.html">
           EUREKA 
           <br>
-          CAFFEE
+          CAFFE
         </a>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,16 +44,16 @@
       <div class="collapse navbar-collapse bg-custom" id="navbarNav">
         <ul id="menuTop" class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a href="" class="nav-link texty"> &nbsp; Home</a>
+            <a href="" class="nav-link texty"> &nbsp; HOME</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link texty"><span class="middot" style="color:orange">&middot;</span> &nbsp; About</a>
+            <a href="" class="nav-link texty"><span class="middot" style="color:orange">&middot;</span> &nbsp; ABOUT</span></a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link texty"><span class="middot" style="color:orange">&middot;</span> &nbsp; Service</a>
+            <a href="" class="nav-link texty"><span class="middot" style="color:orange">&middot;</span> &nbsp; SERVICE</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link texty"><span class="middot" style="color:orange">&middot;</span> &nbsp; Contact</a>
+            <a href="" class="nav-link texty"><span class="middot" style="color:orange">&middot;</span> &nbsp; CONTACTS</a>
           </li>
         </ul>    
       </div>
@@ -64,7 +64,7 @@
     <div>
 	    <h1 class="title texty">Ordering food</h1>
       <img src="https://forums.autodesk.com/autodesk/attachments/autodesk/706/80968/2/0001.png" style="filter:invert(100%);" width="50px" height="50px"><img src="https://forums.autodesk.com/autodesk/attachments/autodesk/706/80968/2/0001.png" style="filter:invert(100%);" width="50px" height="50px"><i class="fas fa-utensils"></i><img src="https://forums.autodesk.com/autodesk/attachments/autodesk/706/80968/2/0001.png" style="filter:invert(100%);" width="50px" height="50px"><img src="https://forums.autodesk.com/autodesk/attachments/autodesk/706/80968/2/0001.png" style="filter:invert(100%);" width="50px" height="50px">
-      <br><br>
+      <br>
       <p class="description texty">Our menu contains a range of all sorts of foods that might be just right for you.</p>
     </div>
   </div>
@@ -73,7 +73,7 @@
 <nav class="navbar bg-light sortingNav">
  <div class="mr-auto"> 
   <div class="dropdown">
-    <button class="dropbtn">Category 
+    <button class="dropbtn">CATEGORY 
       <i class="fa fa-angle-down"></i>
     </button>
     <div class="dropdown-content">
@@ -82,7 +82,7 @@
   </div>
 
   <div class="dropdown">
-    <button class="dropbtn">Sorting 
+    <button class="dropbtn">SORTING 
       <i class="fa fa-angle-down"></i>
     </button>
     <div class="dropdown-content">
@@ -91,7 +91,7 @@
   </div>
   
   <div class="dropdown">
-    <button class="dropbtn">Vegetarian 
+    <button class="dropbtn">VEGETARIAN 
       <i class="fa fa-angle-down"></i>
     </button>
     <div class="dropdown-content">
@@ -101,10 +101,10 @@
  </div>
 
   <div class="ml-auto" style="align-content: center;">
-    <div class="score">
-      Price: 
+    <div id="priceTag"class="score">
+      PRICE
     </div> 
-    <div id="sliderValue1"class="score">
+    <div id="sliderValue1" class="score">
       2
     </div>
     <div class="score">
